Dropped Contact and FAQ in the interest of time. Spent too long on this anyway. Fixed the scripts for booking being on the wrong file.

--- a/styles.css
+++ b/styles.css
@@ -428,7 +428,7 @@ main {
 }
 .values-list {
     display: grid;
-    grid-template-columns: repeat(auto-fit minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     gap: 50px;
     max-width: 1000px;
     margin: 0 auto;
@@ -611,7 +611,7 @@ main {
     align-self: flex-start;
 }
 /* Event Info */
-events-info {
+.events-info {
     padding: 80px 0;
     text-align: center;
 }
@@ -725,7 +725,7 @@ events-info {
 .booking-event-details h3 {
     font-size: 1.8rem;
     color: var(--gold);
-    margin 0 0 15px 0;
+    margin: 0 0 15px 0;
 }
 .booking-ticket-info {
     margin-top: 40px;
@@ -783,7 +783,7 @@ events-info {
     color: white;
 }
 .booking-radio-label input[type="radio"] {
-    margin-right: 8px
+    margin-right: 8px;
 }
 .booking-radio-label.disabled {
     opacity: 0.5;
